--- a/styles/general-styles.css
+++ b/styles/general-styles.css
@@ -3,7 +3,7 @@
     padding: 0;
 }
 body {
-    background-color: rgba(127, 255, 212, 0.18);
+    background-color: rgba(165, 210, 238, 0.8);
     height: 100vh;
     display: flex;
     align-items: center;
@@ -11,10 +11,14 @@ body {
 }
 
 #content {
-    background-color: yellow;
+    background-image: url("../resources/background.png");
+    background-position: center;
+    border-radius: 10px;
     width: 80%;
     height: 70%;
     display: flex;
     flex-direction: row;
+    justify-content: start;
+    align-items: stretch;
 }
 
