--- a/styles/personal-page.css
+++ b/styles/personal-page.css
@@ -1,3 +1,17 @@
-div {
+#leftSectionProjects {
     background-color: green;
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+}
+
+#logoImage {
+    width: 100px;
+    height: 100px;
+    object-fit: cover;
+}
+
+#layoutDisplayed {
+    flex: 4;
+    
 }
