--- a/styles/general-styles.css
+++ b/styles/general-styles.css
@@ -1,6 +1,10 @@
 * {
     margin: 0;
     padding: 0;
+    font-family: "Stack Sans Headline", sans-serif;
+    font-style: normal;
+    font-optical-sizing: auto;
+    font-weight: 200;
 }
 body {
     background-color: rgba(165, 210, 238, 0.8);
