--- a/styles/personal-page.css
+++ b/styles/personal-page.css
@@ -1,17 +1,46 @@
 #leftSectionProjects {
-    background-color: green;
+    
     flex: 1;
     display: flex;
     flex-direction: column;
+    border-right: 3px solid rgba(255, 255, 255, 0.3);
 }
 
 #logoImage {
     width: 100px;
     height: 100px;
     object-fit: cover;
+    margin-left: 10px;
+    margin-top: 10px;
 }
 
 #layoutDisplayed {
     flex: 4;
     
+}
+
+#projectsTitle {
+    margin-left: 30px;
+    margin-top: 20px;
+    margin-right: 10px;
+    font-weight: 500;
+    font-size: 38px;
+    color: #FFFFFF;
+    /* text-shadow: 2px 2px 1px #010101; */
+    letter-spacing: 1px;
+}
+
+#projects {
+    display: flex;
+    flex-direction: column;
+    margin-left: 30px;
+    margin-top: 20px;
+}
+
+#projectsDisplay {
+    margin-right: 30px;
+    margin-top: 30px;
+    color: #FFFFFF;
+    font-size: 18px;
+    text-align: end;
 }
