--- a/styles/personal-page.css
+++ b/styles/personal-page.css
@@ -43,4 +43,7 @@
     color: #FFFFFF;
     font-size: 18px;
     text-align: end;
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
 }
