fix : fix not displaying all of projects correctly

--- a/styles/general-styles.css
+++ b/styles/general-styles.css
@@ -24,5 +24,6 @@ body {
     flex-direction: row;
     justify-content: start;
     align-items: stretch;
+    border: 3px solid rgba(255, 255, 255, 0.3);
 }
 
