fix : add fix for render layout

--- a/styles/general-styles.css
+++ b/styles/general-styles.css
@@ -5,6 +5,7 @@
     font-style: normal;
     font-optical-sizing: auto;
     font-weight: 200;
+    color: #FFFFFF;
 }
 body {
     background-color: rgba(165, 210, 238, 0.8);
