--- a/styles/personal-page.css
+++ b/styles/personal-page.css
@@ -1,68 +1,15 @@
-#leftSectionProjects {
-    
-    flex: 1;
-    display: flex;
-    flex-direction: column;
-    border-right: 3px solid rgba(255, 255, 255, 0.3);
+#projectList {
+    border-right: 2px solid rgba(255, 255, 255, 0.2);
 }
 
-#logoImage {
-    width: 100px;
-    height: 100px;
-    object-fit: cover;
-    margin-left: 10px;
-    margin-top: 10px;
+#logo {
+    margin-left: -10px;
+    padding: 0;
 }
 
-#layoutDisplayed {
-    flex: 4;
-    
-}
-
-#projectsTitle {
-    margin-left: 30px;
-    margin-top: 20px;
-    margin-right: 10px;
-    font-weight: 500;
-    font-size: 38px;
-    color: #FFFFFF;
-    /* text-shadow: 2px 2px 1px #010101; */
-    letter-spacing: 1px;
-}
-
-#projects {
-    display: flex;
-    flex-direction: column;
-    margin-left: 30px;
-    margin-top: 20px;
-}
-
-#projectsDisplay {
-    margin-right: 30px;
-    margin-top: 30px;
-    color: #FFFFFF;
-    font-size: 18px;
-    text-align: end;
-    display: flex;
-    flex-direction: column;
-    gap: 15px;
-}
-
-#projectsDisplay div {
-    margin-left: 10px;
-    padding-right: 10px;
-    transition: 0.3s;
-}
-#projectsDisplay div:hover {
-    background-color: rgba(0,0,0,0.2);
-}
-#layoutDisplayed {
-    padding-left: 50px;
-    padding-top: 50px;
-}
-
-#layoutDisplayed p {
-    font-size: 38px;
-    color: #FFFFFF;
-    font-weight: 900;
+#sidebar {
+    width: 250px;
+    padding-left: 30px;
+    padding-right: 30px;
+    border-right: 2px solid rgba(255, 255, 255, 0.2);
 }
