--- a/styles/personal-page.css
+++ b/styles/personal-page.css
@@ -1,3 +1,24 @@
+#overlay {
+    position: fixed;
+    inset: 0; /*whole screen*/
+    background: transparent;
+    z-index: 9999;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#formContainer {
+    width: 700px;
+    height: 800px;
+    border-radius: 10px;
+    background-color: yellow;
+}
+
+#formProjectTitle {
+    font-size: 30px;
+}
 #projectList {
     border-right: 2px solid rgba(255, 255, 255, 0.2);
 }
