feat : add date and priority options

--- a/styles/personal-page.css
+++ b/styles/personal-page.css
@@ -60,6 +60,7 @@
 #toDoContainer div {
     display: flex;
     flex-direction: row;
+    justify-content: space-between;
     background-color: burlywood;
 }
 
