--- a/styles/personal-page.css
+++ b/styles/personal-page.css
@@ -32,6 +32,14 @@
     border-right: 2px solid rgba(255, 255, 255, 0.2);
 }
 
+#projectList div {
+    transition: 0.2s;
+}
+
+#projectList div:hover {
+    background-color: rgba(1,1,1,0.1);
+    cursor: pointer;
+}
 #logo {
     margin-left: -10px;
     padding: 0;
