--- a/styles/personal-page.css
+++ b/styles/personal-page.css
@@ -47,6 +47,24 @@
     border-right: 2px solid rgba(255, 255, 255, 0.2);
 }
 
+#newProjectButton {
+    width: 50px;
+    height: 50px;
+    background-image: url("../resources/new_to_do_button.png");
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-color: transparent;
+    border: none;
+    margin-top: 20px;
+    transition: 0.2s;
+}
+
+#newProjectButton:hover {
+    background-color: rgba(1,1,1,0.1);
+    cursor: pointer;
+}
+
 #main {
     display: flex;
     flex-direction: column;
